solved layout issues plaguing photo slider for desktop

--- a/styles/home.css
+++ b/styles/home.css
@@ -12,12 +12,13 @@
   flex-direction: row;
   background: linear-gradient(to right, rgb(253, 244, 219, 0.3), rgb(239, 132, 84, 0.3)); /* same as #fdf4db, #ef8454 */
   padding: 15px;
+  width: 100%;
 }
 
 .content-box .text-box {
   background: linear-gradient(to right, rgb(232, 0, 233, 0.12), rgb(37, 3, 192, 0.12)); /* same as #e800e9, #2503c0 */
   min-height: 100%;
-  flex-basis: 50%;
+  flex-basis: 40%;
   font-family: "NunitoSans";
   font-weight: 250;
   line-height: 1.3;
@@ -103,10 +104,11 @@
 }
 
 .feature-photo {
-  top: 0;
-  left: 0;
+  inset: 0;
   width: 100%;
-  object-fit: cover;
+  height: auto;
+  padding: 20%
+  /* object-fit: cover; */
   /* position: absolute; */
 }
 
@@ -178,4 +180,29 @@
   }
 }
 
+.photo-slider {
+  display: flex;
+  flex-direction: row;
+  overflow-x: scroll;
+  /* gap: 10px; */
 
+  flex-basis: 60%;
+
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+}
+
+.photo-slider::-webkit-scrollbar {
+  display: none;
+}
+
+.photo-container {
+  max-height: 400px;
+  width: auto;
+}
+
+.photo {
+  max-height: 400px;
+  width: auto;
+  padding-right: 10px;
+}
